fix(Zooniverse): vertically align text content

--- a/src/Zoo.css
+++ b/src/Zoo.css
@@ -6,8 +6,9 @@
 .zoo-banner {
     display:flex;
     flex-direction: column;
-    align-self: flex-end;
     width: 100%;
+    align-self:center;
+    margin-top: 10%;
 }
 
 .zoo-banner__textcontent{
